Add badges (#19)
* badges

* qwdsadf

* badges images are a real pain

* bugfix

* bug fix

* changed image form bytes to a good old URL

* added generic filter

* added generic filter

* filter seems to do his job. Still need to handle the secret I guess

* added secret to be checked with api key

* error in the filtering

* Upadate the filter

* Fix the filter

* Fix point scale endpoints (#15)

* pr pipeline

* 1/2 master.yml + dockerfile

* test 1

* test 2

* test 3

* ready for pr

* not ready for pr new test

* test 4

* test 5

* Add badges (#6)

* badges

* qwdsadf

* badges images are a real pain

* bugfix

* bug fix

* Update Dockerfile

* Update master.yml

* ready for merge

* corr pr.yml

* fix simon overwrite and update sql script init

* update mysql init script

* Upodate git ignore

* Remove idea and iml

* merge

* Refactor the function mapper (#9)

* ready for pr

* more time for server up

* github action wait for server

* github action corr syntax

* github action corr bug

* github action corr job

* github action corr syntax

* github action corr nom job

* update gitignore

* update impl/pom.xml

* fix broken pipeline

* Refactor application controller (#13)

* Remove fonction that are not used

* Remove fonction that are not used

* Add some test to application package (#14)

* Add test for applciationMapper

* Add service test


* Issues with permissions ?????????????????????????????????????????????

* fixing the rules to be able to use multiple badges and scalepoints in one rule

* change the rule and reward system to integrate the reputation. Not tested for now

* [WIP] Badge cucumber test - adding BadgeCreateCommand and BadgeCreateDTO

* [WIP] add badge.feature and a scenario skeleton

* [WIP] - scenario failled : error 403 forbidden

* big changes comming up!

* added some quality changes to the badges

* Co
