# impl/src/main/java/ch/heigvd/amt/gamificator/api/pointScale/PointScaleService.java
@@ -1,13 +1,18 @@
 package ch.heigvd.amt.gamificator.api.pointScale;
 
+import ch.heigvd.amt.gamificator.api.application.ApplicationMapper;
+import ch.heigvd.amt.gamificator.api.application.ApplicationService;
+import ch.heigvd.amt.gamificator.api.model.ApplicationDTO;
 import ch.heigvd.amt.gamificator.api.model.PointScaleCreateCommand;
 import ch.heigvd.amt.gamificator.api.model.PointScaleDTO;
 import ch.heigvd.amt.gamificator.entities.Application;
 import ch.heigvd.amt.gamificator.entities.PointScale;
+import ch.heigvd.amt.gamificator.exceptions.NotAuthorizedException;
 import ch.heigvd.amt.gamificator.exceptions.NotFoundException;
 import ch.heigvd.amt.gamificator.repositories.ApplicationRepository;
 import ch.heigvd.amt.gamificator.repositories.PointScaleRepository;
 import lombok.AllArgsConstructor;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.stereotype.Service;
 
@@ -15,17 +20,21 @@ import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
 
-
 @Service
 @AllArgsConstructor
 public class PointScaleService {
 
     private final PointScaleRepository pointScaleRepository;
-    private final ApplicationRepository applicationRepository;
 
-    public PointScaleDTO createPointScale(PointScaleCreateCommand pointScaleCreateCommand) throws NotFoundException {
+    @Autowired
+    private ApplicationService applicationService;
+
+    public PointScaleDTO createPointScale(PointScaleCreateCommand pointScaleCreateCommand, long applicationId) throws NotFoundException {
         PointScale pointScale = PointScale.toEntity(pointScaleCreateCommand);
-        Application application = getApplicationById(pointScaleCreateCommand.getApplicationId());
+
+        ApplicationDTO applicationDTO = applicationService.getApplicationById(applicationId);
+        Application application = ApplicationMapper.toEntity(applicationDTO);
+
         pointScale.setApplication(application);
 
         PointScale pointScaleCreated = pointScaleRepository.save(pointScale);
@@ -34,32 +43,21 @@ public class PointScaleService {
         return pointScaleDTO;
     }
 
-    public PointScaleDTO updatePointScale(Long id, PointScaleCreateCommand pointScaleCreateCommand) throws NotFoundException {
+    public PointScaleDTO updatePointScale(Long id, PointScaleCreateCommand pointScaleCreateCommand, long applicationId) throws NotFoundException {
         if(!pointScaleRepository.existsById(id)) {
             throw new NotFoundException("Not found");
         }
 
         PointScale pointScale = PointScale.toEntity(pointScaleCreateCommand);
-        Application application = getApplicationById(pointScaleCreateCommand.getApplicationId());
+        ApplicationDTO applicationDTO = applicationService.getApplicationById(applicationId);
+        Application application = ApplicationMapper.toEntity(applicationDTO);
+
         pointScale.setApplication(application);
         pointScale.setId(id);
 
         PointScale updatedPointScale = pointScaleRepository.save(pointScale);
 
         return PointScale.toDTO(updatedPointScale);
-    }
-
-    public List<PointScaleDTO> getAllPointScales() {
-        Iterable<PointScale> pointScales = new ArrayList<>();
-        pointScales = pointScaleRepository.findAll();
-
-        List<PointScaleDTO> pointScaleDTOs = new LinkedList<>();
-
-        for(PointScale pointScale : pointScales){
-            pointScaleDTOs.add(PointScale.toDTO(pointScale));
-        }
-
-        return pointScaleDTOs;
     }
 
     public List<PointScaleDTO> getAllPointScaleOfApplication(Long applicationId) throws NotFoundException {
@@ -91,8 +89,10 @@ public class PointScaleService {
         return PointScale.toDTO(pointScale);
     }
 
-    private Application getApplicationById(Long applicationId) throws NotFoundException {
-        return applicationRepository.findById(applicationId)
+    public boolean isPointScaleFromThisApplication(long pointScaleId, long applicationId) throws NotFoundException {
+        PointScale pointScale = pointScaleRepository.findById(pointScaleId)
                 .orElseThrow(() -> new NotFoundException("Not found"));
+
+        return pointScale.getApplication().getId() == applicationId;
     }
 }
