# impl/src/main/java/ch/heigvd/amt/gamificator/entities/Badge.java
@@ -1,13 +1,13 @@
 package ch.heigvd.amt.gamificator.entities;
 
+import ch.heigvd.amt.gamificator.api.model.BadgeDTO;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
-import javax.persistence.Entity;
-import javax.persistence.GeneratedValue;
-import javax.persistence.GenerationType;
-import javax.persistence.Id;
+import javax.persistence.*;
+import java.net.URI;
+import java.net.URISyntaxException;
 
 @Entity
 @Data
@@ -18,7 +18,9 @@ public class Badge {
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private long id;
 
+    @ManyToOne
+    private Application application;
+
     private String name;
-    private long applicationId;
-    private String url;
+    private String imageUrl;
 }
