# impl/src/main/resources/api-spec.yaml
@@ -3,19 +3,10 @@ info:
   version: '0.1.0'
   title: Gamificator API
   description: A gamification engine API
-
-servers:
-  - url: http://localhost/
-
 security:
   - bearerAuth: []
   - apiKeyAuth: []
-#servers: [
-#    {
-#      "url": "localhost",
-#      "description": "Development server",
-#      "schemes": ["http"]
-#    }]
+  - apiKeySecret: []
 paths:
   /applications:
     post:
@@ -67,9 +58,9 @@ paths:
       operationId: createBadge
       requestBody:
         content:
-          multipart/form-data:
+          'application/json':
             schema:
-              $ref: '#/components/schemas/Badge'
+              $ref: '#/components/schemas/BadgeCreateCommand'
       responses:
         '201':
           description: created
@@ -84,7 +75,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Badge'
+                  $ref: '#/components/schemas/BadgeDTO'
   /badges/{id}:
     get:
       description: get one badge, by id
@@ -94,6 +85,7 @@ paths:
           name: id
           schema:
             type: integer
+            format: int64
           required: true
       responses:
         '200':
@@ -101,7 +93,7 @@ paths:
           content:
             'application/json':
               schema:
-                $ref: '#/components/schemas/Badge'
+                $ref: '#/components/schemas/BadgeDTO'
     put:
       description: Update a badge
       operationId: updateBadge
@@ -110,28 +102,16 @@ paths:
           name: id
           schema:
             type: integer
+            format: int64
           required: true
       requestBody:
         content:
           'application/json':
             schema:
-              $ref: '#/components/schemas/Badge'
+              $ref: '#/components/schemas/BadgeDTO'
       responses:
         '200':
           description: updated
-
-    delete:
-      description: Delete a badge
-      operationId: deleteBadge
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: integer
-          required: true
-      responses:
-        '204':
-          description: deleted
   /users:
     get:
       description: get all users
@@ -235,13 +215,6 @@ paths:
     get:
       description: get the list of all point scales
       operationId: getAllPointScales
-      parameters:
-        - in: query
-          name: applicationId
-          schema:
-            type: integer
-            format: int64
-            description: The id of the application from which to retrieve point scales
       responses:
         '200':
           description: success
@@ -301,13 +274,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/PointScaleDTO'
 
-    delete:
-      description: delete a point scale
-      operationId: deletePointScale
-      responses:
-        '204':
-          description: deleted
-
   /events:
     post:
       description: create an event
@@ -330,6 +296,10 @@ components:
       type: apiKey
       in: header
       name: X-API-KEY
+    apiKeySecret:
+      type: apiKey
+      in: header
+      name: X-API-SECRET
   schemas:
     ApplicationCreateCommand:
       type: object
@@ -350,16 +320,25 @@ components:
           type: string
           format:
             uri
-    Badge:
+    BadgeDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        imageUrl:
+          type: string
+          format: uri
+    BadgeCreateCommand:
       type: object
       properties:
         name:
           type: string
-        applicationId:
-          type: integer
-        image:
+        imageUrl:
           type: string
-          format: binary
+          format: uri
     User:
       type: object
       properties:
@@ -369,9 +348,6 @@ components:
     RuleCreateCommand:
       type: object
       properties:
-        applicationId:
-          type: integer
-          format: int64
         condition:
           $ref: '#/components/schemas/ConditionDTO'
         then:
@@ -416,12 +392,21 @@ components:
     ActionDTO:
       type: object
       properties:
-        methode:
+        awardBadges:
+          type: array
+          items:
+            type: string
+        awardPoints:
+          type: array
+          items:
+            $ref: '#/components/schemas/AwardPointDTO'
+    AwardPointDTO:
+      type: object
+      properties:
+        pointScaleName:
           type: string
-        path:
-          type: string
-        payload:
-          type: string
+        value:
+          type: integer
     ConditionDTO:
       type: object
       properties:
@@ -437,9 +422,6 @@ components:
           type: string
         description:
           type: string
-        applicationId:
-          type: integer
-          format: int64
     PointScaleCreateCommand:
       type: object
       properties:
@@ -447,6 +429,3 @@ components:
           type: string
         description:
           type: string
-        applicationId:
-          type: integer
-          format: int64
